ths issue was overflow: hidden with sub nav links

--- a/src/app/top-bar/top-bar.component.css
+++ b/src/app/top-bar/top-bar.component.css
@@ -1,47 +1,34 @@
 .logo-wrapper img {
     width: 100px;
 }
-.nav-wrapper>ul {
+.nav-wrapper ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
   
-.nav-wrapper>ul>li {
+.nav-wrapper  li {
     float: left;
 }
   
-.nav-wrapper>ul>li>a {
+.nav-wrapper  li a {
     display: block;
     padding: 8px;
 }
-.dropbtn {
-    border: none;
-}
-
 .dropdown {
     position: relative;
-    display: inline-block;
 }
 .dropdown-content {
-    display: none;
+    visibility: hidden;
     position: absolute;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
 }
-.dropdown-content a {
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+.dropdown-content a { 
+    color: #222222;
 }
 .dropdown-content a:hover {
-    /* background-color: #ddd; */
+    text-decoration: none;
 }
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-.dropdown:hover .dropbtn {
-    
+.dropdown:hover .dropdown-content{
+    visibility: visible;
 }
